--- a/public/css/guestbook.css
+++ b/public/css/guestbook.css
@@ -35,4 +35,6 @@
     z-index: 135;
 
     pointer-events: auto;
+    /* For mobile */
+    touch-action: pan-y;
 }
